<resources>
    <string name="app_name">Capstone</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">Login</string>
    <string name="log_in">LOG IN</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>

    <string-array name="role">
        <item>Passenger</item>
        <item>Driver</item>
    </string-array>

</resources>